systeme de combat mis en place