@@ -1,6 +1,9 @@
+package Pokemon.pokemons;
+
 import java.util.ArrayList;
 import java.lang.Math;
 import java.util.Objects;
+
 
 public class Pokemon extends Personnage {
     private int currentPV;
@@ -12,7 +15,7 @@ public class Pokemon extends Personnage {
     private int defense;
     private int speed;
     private ArrayList<Attaque> moves;
-    private String status;
+    private Boolean ko;
 
     public int getCurrentPV() {
         return currentPV;
@@ -90,15 +93,15 @@ public class Pokemon extends Personnage {
         moves.add(attaque);
     }
 
-    public String getStatus() {
-        return status;
+    public Boolean getKo() {
+        return ko;
     }
 
-    public void setStatus(String status) {
-        this.status = status;
+    public void setKo(Boolean ko) {
+        this.ko = ko;
     }
 
-    public Pokemon(String name, int currentPV, PokemonType type, int exp, int level, int maxPV, int attaque, int defense, int speed, ArrayList<Attaque> moves, String status) {
+    public Pokemon(String name, int currentPV, PokemonType type, int exp, int level, int maxPV, int attaque, int defense, int speed, ArrayList<Attaque> moves, Boolean ko) {
         super(name);
         this.currentPV = currentPV;
         this.type = type;
@@ -109,12 +112,12 @@ public class Pokemon extends Personnage {
         this.defense = defense;
         this.speed = speed;
         this.moves = moves;
-        this.status = status;
+        this.ko = ko;
     }
 
     @Override
     public String toString() {
-        return "Pokemon{" +
+        return "Pokemon.pokemons.Pokemon{" +
                 "name= " + this.getName() +
                 ", currentPV=" + currentPV +
                 ", type=" + type +
@@ -125,11 +128,12 @@ public class Pokemon extends Personnage {
                 ", defense=" + defense +
                 ", speed=" + speed +
                 ", moves=" + moves +
-                ", status='" + status +
+                ", ko='" + ko +
                 '}';
     }
 
     public void attaquer(Pokemon cible, Attaque attaque) {
+        System.out.println(this.getName() + " attaque " + cible.getName() + " avec " + attaque.getName());
         cible.recevoirDegat(attaque, this.attaque);
     }
 
@@ -138,14 +142,14 @@ public class Pokemon extends Personnage {
         if (rand > attaque.getAccuracy() ) {
             System.out.println("Attaque failed");
         } else {
-            if (Objects.equals(attaque.getType().getStrengths().get(0), this.getType().getName())) {
-                this.currentPV -= ((attaque.getDamage() * puissance) / this.defense) * 1.2;
+            if (Objects.equals(attaque.getType().getStrengths().getFirst(), this.getType().getName())) {
+                this.currentPV -= (((attaque.getDamage() * puissance) / this.defense) * 1.2);
                 System.out.println("super efficace");
             } else if (this.getType().getStrengths().get(0).equals(attaque.getType().getName())){
-                this.currentPV -= ((attaque.getDamage() * puissance) / this.defense) * 0.5;
+                this.currentPV -= (((attaque.getDamage() * puissance) / this.defense) * 0.5);
                 System.out.println("tres peu efficace");
             } else {
-                this.currentPV -= (attaque.getDamage() * puissance) / this.defense;
+                this.currentPV -= ((attaque.getDamage() * puissance) / this.defense);
                 System.out.println("attaque normal");
             }
         }
